--- a/Healthtechbd/ForgotPasswordWindow.xaml
+++ b/Healthtechbd/ForgotPasswordWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Healthtechbd"
         mc:Ignorable="d"
-        Title="ForgotPasswordWindow" Height="600" Width="1200" Closed="Window_Closed" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="ForgotPasswordWindow" WindowState="Maximized" Height="600" Width="1200" Closed="Window_Closed" WindowStartupLocation="CenterScreen">
 
     <Grid>
         <Grid.Background>
@@ -24,7 +24,7 @@
 
             <!--Login-->
             <Grid Margin="0 15 0 0">
-                <StackPanel>
+                <StackPanel HorizontalAlignment="Left" Width="50">
                     <TextBlock Style="{StaticResource RegistrationLink}" x:Name="loginLink" Text="Login" MouseDown="loginLink_MouseDown"></TextBlock>
                 </StackPanel>
             </Grid>
