--- a/Healthtechbd/Patients.xaml
+++ b/Healthtechbd/Patients.xaml
@@ -33,7 +33,7 @@
                             <ColumnDefinition Width="80"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
 
-                        <TextBox x:Name="searchField" Style="{StaticResource SearchBox}" Grid.Column="0" Text="" TextChanged="searchField_TextChanged"/>
+                        <TextBox x:Name="searchField" Style="{StaticResource SearchBox}" Grid.Column="0" Text=""/>
                         <Button x:Name="btnSearch" Style="{StaticResource SearchButton}" Grid.Column="1" Margin="0 0 10 0" Click="btnSearch_Click">
                             <materialDesign:PackIcon Kind="DatabaseSearch"/>
                         </Button>
@@ -44,7 +44,7 @@
                 <!--Info Area-->
                     <Border Padding="10 0">
                         <Grid>
-                            <DataGrid MaxHeight="400" AutoGenerateColumns="False" CanUserAddRows="False" x:Name="dataGridPatients" ItemsSource="{Binding}" HorizontalAlignment="Left"  Margin="-10, 0, -10, 0" Background="White">
+                        <DataGrid Height="750" AutoGenerateColumns="False" CanUserAddRows="False" x:Name="dataGridPatients" ItemsSource="{Binding}" HorizontalAlignment="Left"  Margin="-10, 0, -10, 0" Background="White">
                                 <DataGrid.Columns>
                                     <DataGridTextColumn Width="*" Header="Name" Binding="{Binding first_name}" />
                                     <DataGridTextColumn Width="*" Header="Phone" Binding="{Binding phone}" />
