--- a/Healthtechbd/Tests.xaml
+++ b/Healthtechbd/Tests.xaml
@@ -33,7 +33,7 @@
                             <ColumnDefinition Width="80"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
 
-                        <TextBox x:Name="searchField" Style="{StaticResource SearchBox}" Grid.Column="0" TextChanged="searchField_TextChanged"/>
+                        <TextBox x:Name="searchField" Style="{StaticResource SearchBox}" Grid.Column="0"/>
                         <Button x:Name="btnSearch" Style="{StaticResource SearchButton}" Margin="0 0 10 0" Click="btnSearch_Click" Grid.Column="1">
                             <materialDesign:PackIcon Kind="DatabaseSearch"/>
                         </Button>
@@ -45,7 +45,7 @@
                     <Border Padding="10 0">
                         <Grid>
 
-                            <DataGrid MaxHeight="480" AutoGenerateColumns="False" CanUserAddRows="False" x:Name="dataGridTests" ItemsSource="{Binding}" HorizontalAlignment="Left" Margin="-10, 0, -10, 0" Background="White">
+                            <DataGrid Height="750" AutoGenerateColumns="False" CanUserAddRows="False" x:Name="dataGridTests" ItemsSource="{Binding}" HorizontalAlignment="Left" Margin="-10, 0, -10, 0" Background="White">
                                 <DataGrid.Columns>
                                     <DataGridTextColumn Width="*" Header="Name" Binding="{Binding name}" />
                                     <DataGridTextColumn Width="*" Header="Created" Binding="{Binding created}" />
