--- a/Healthtechbd/AddDiagnosisTemplate.xaml
+++ b/Healthtechbd/AddDiagnosisTemplate.xaml
@@ -31,7 +31,7 @@
         </Grid>
 
         <!--Page Heading Bottom-->
-        <Border Margin="20" Height="390">
+        <Border Margin="20" Height="Auto">
             <StackPanel>
 
                 <!--Panel Head-->
@@ -57,28 +57,30 @@
                             </Grid.ColumnDefinitions>
 
                             <StackPanel Grid.Row="0" Grid.Column="0" Margin="5 0">
-                                <TextBlock Style="{StaticResource Level}" Text="Diagnosis Name *" />
+                                <TextBlock Style="{StaticResource Level}" Text="Diagnosis Name"/>
                                 <ComboBox IsTextSearchEnabled="False" IsEditable="True" x:Name="DiagnosisComboBox" Style="{StaticResource DiagnosisComboBox}" GotFocus="DiagnosisComboBox_GotFocus"/>
                             </StackPanel>
 
-                            <StackPanel Grid.Row="0" Grid.Column="1"  Margin="5 0">
+                            <StackPanel Grid.Row="0" Grid.Column="1" Margin="5 0">
                                 <TextBlock Style="{StaticResource Level}" Text="Instructions"/>
                                 <TextBox x:Name="Instruction" Style="{StaticResource InputField}" Text=""/>
                             </StackPanel>
 
                             <StackPanel Grid.Row="1" Grid.Column="0"  Margin="5 0">
                                 <TextBlock Style="{StaticResource Level}" Text="Medicines"/>
-                                <Grid DataContext="{StaticResource medicineModel }" Height="102">
-                                    <control:MedicineChosenControl MedicinesLists="{Binding MedicinesLists}" SelectedMedicines="{Binding SelectedMedicines}"  DefaultMessage="Please Select Items."   ValueMemberPath="Id"  DisplayMemberPath="Name" Margin="-1,1,1,0"  />
+                                <Grid DataContext="{StaticResource medicineModel}">
+                                    <control:MedicineChosenControl MedicinesLists="{Binding MedicinesLists}" SelectedMedicines="{Binding SelectedMedicines}"   DefaultMessage="Please Select Items."  ValueMemberPath="Id" DisplayMemberPath="Name" Margin="-1,1,1,-75"  />
                                 </Grid>
                             </StackPanel>
 
-                            <StackPanel Grid.Row="1" Grid.Column="1"  Margin="5 0">
+                            <StackPanel Grid.Row="1" Grid.Column="1" Margin="5 0">
                                 <TextBlock Style="{StaticResource Level}" Text="Tests"/>
-                                <Grid DataContext="{StaticResource testModel}" Height="102">
-                                    <control:TestChosenControl TestsLists="{Binding TestsLists}" SelectedTests="{Binding SelectedTests}"  DefaultMessage="Please Select Items."   ValueMemberPath="Id"  DisplayMemberPath="Name" Margin="-1,1,1,0"  />
-                                </Grid> 
-                            </StackPanel> 
+                                <Grid DataContext="{StaticResource testModel}">
+                                    <control:TestChosenControl TestsLists="{Binding TestsLists}" SelectedTests="{Binding SelectedTests}"  DefaultMessage="Please Select Items."  ValueMemberPath="Id" DisplayMemberPath="Name" />
+                                </Grid>
+                            </StackPanel>
+
+                            <TextBox x:Name="DiagnosisTemplateId" Visibility="Hidden" Style="{StaticResource InputField}" Text=""/>
 
                         </Grid>
                     </Border>
@@ -89,7 +91,7 @@
 
         </Border>
 
-        <Grid Height="60" Background="#E3E7EB" >
+        <Grid Height="60" Background="#E3E7EB" Margin="20">
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
                 <Button x:Name="CancelAddDiagnosisTemplate" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddDiagnosisTemplate_Click"/>
