--- a/Healthtechbd/AddMedicines.xaml
+++ b/Healthtechbd/AddMedicines.xaml
@@ -29,7 +29,7 @@
         </Grid>
 
         <!--Page Heading Bottom-->
-        <Border Margin="20" Height="390">
+        <Border Margin="20" Height="Auto">
             <StackPanel>
 
                 <!--Panel Head-->
@@ -56,7 +56,7 @@
 
         </Border>
 
-        <Grid Height="60" Background="#E3E7EB" >
+        <Grid Height="60" Background="#E3E7EB" Margin="20">
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
                 <Button x:Name="CancelAddMedicine" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddMedicine_Click" />
