--- a/Healthtechbd/AddTest.xaml
+++ b/Healthtechbd/AddTest.xaml
@@ -14,7 +14,7 @@
         <Grid Height="60" Background="#fff" VerticalAlignment="top">
             <Border Margin="20 0 0 0">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Test" MouseDown="CancelAddTest_Click" />
+                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Tests" MouseDown="CancelAddTest_Click" />
                     <TextBlock Style="{StaticResource BreadcrumbItem}" Text="/" />
                     <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Add Test"/>
                 </StackPanel>
@@ -23,7 +23,7 @@
         </Grid>
 
         <!--Page Heading Bottom-->
-        <Border Margin="20" Height="390">
+        <Border Margin="20" Height="Auto">
             <StackPanel>
 
                 <!--Panel Head-->
@@ -47,7 +47,7 @@
 
             </StackPanel>
         </Border>
-        <Grid Height="60" Background="#E3E7EB" >
+        <Grid Height="60" Background="#E3E7EB" Margin="20">
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
                 <Button x:Name="CancelAddTest" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddTest_Click"/>
