--- a/Healthtechbd/ChangeProfilePic.xaml
+++ b/Healthtechbd/ChangeProfilePic.xaml
@@ -12,7 +12,7 @@
         <Grid Height="60" Background="#fff" VerticalAlignment="top">
             <Border Margin="20 0 0 0">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Dashboard"/>
+                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Dashboard" MouseDown="CancelUpdateProPic_Click"/>
                     <TextBlock Style="{StaticResource BreadcrumbItem}" Text="/" />
                     <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Change Profile Picture"/>
                 </StackPanel>
@@ -20,7 +20,7 @@
         </Grid>
 
         <!--Page Heading Bottom-->
-        <Border Margin="20" Height="390">
+        <Border Margin="20" Height="Auto">
             <StackPanel>
 
                 <!--Panel Head-->
@@ -47,10 +47,10 @@
 
             </StackPanel>
         </Border>
-        <Grid Height="60" Background="#E3E7EB" >
+        <Grid Height="60" Background="#E3E7EB" Margin="20">
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button x:Name="CancelUpdateProPic" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB"/>
+                <Button x:Name="CancelUpdateProPic" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelUpdateProPic_Click"/>
                 <Button x:Name="SubmitUpdateProPic" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitUpdateProPic_Click" />
             </StackPanel>
 
