--- a/Healthtechbd/Diagnosis.xaml
+++ b/Healthtechbd/Diagnosis.xaml
@@ -33,7 +33,7 @@
                             <ColumnDefinition Width="80"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
 
-                        <TextBox x:Name="searchField" Style="{StaticResource SearchBox}" Grid.Column="0" TextChanged="searchField_TextChanged" />
+                        <TextBox x:Name="searchField" Style="{StaticResource SearchBox}" Grid.Column="0"/>
                         <Button x:Name="btnSearch" Style="{StaticResource SearchButton}" Grid.Column="1" Margin="0 0 10 0" Click="btnSearch_Click">
                             <materialDesign:PackIcon Kind="DatabaseSearch"/>
                         </Button>
@@ -45,7 +45,7 @@
                 <!--<ScrollViewer VerticalScrollBarVisibility="Auto" Background="#FFFFFF"  Height="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=Height}">-->
                     <Border Padding="10 0">
                         <Grid>
-                            <DataGrid MaxHeight="400" AutoGenerateColumns="False" CanUserAddRows="False" x:Name="dataGridDiagnosis" ItemsSource="{Binding}" HorizontalAlignment="Left"  Margin="-10, 0, -10, 0" Background="White">
+                            <DataGrid Height="750" AutoGenerateColumns="False" CanUserAddRows="False" x:Name="dataGridDiagnosis" ItemsSource="{Binding}" HorizontalAlignment="Left"  Margin="-10, 0, -10, 0" Background="White">
                                 <DataGrid.Columns>
                                     <DataGridTextColumn Width="*" Header="Name" Binding="{Binding name}" />
                                     <DataGridTextColumn Width="*" Header="Created" Binding="{Binding created}" />
