--- a/Healthtechbd/App.xaml
+++ b/Healthtechbd/App.xaml
@@ -21,6 +21,12 @@
                 <Setter Property="Margin"  Value="0 5 0 25"/>
             </Style>
 
+            <Style TargetType="TextBlock" x:Key="defaultViewLevel">
+                <Setter Property="Padding" Value="10"/>
+                <Setter Property="FontSize" Value="15"/>
+                <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
+            </Style>
+
             <!--Password-->
             <Style TargetType="PasswordBox">
                 <Setter Property="Foreground" Value="#7d7d7d"/>
