--- a/Healthtechbd/App.xaml
+++ b/Healthtechbd/App.xaml
@@ -22,7 +22,7 @@
             </Style>
 
             <Style TargetType="TextBlock" x:Key="defaultViewLevel">
-                <Setter Property="Padding" Value="10"/>
+                <Setter Property="Padding" Value="2 10"/>
                 <Setter Property="FontSize" Value="15"/>
                 <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
             </Style>
